calico-gloo-istio/gloo/03-deploy-http-bin.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin
  labels:
    name: httpbin
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: httpbin
  labels:
    app: httpbin
    service: httpbin
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8080
  selector:
    app: httpbin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
      version: v1
  template:
    metadata:
      labels:
        app: httpbin
        version: v1
    spec:
      serviceAccountName: httpbin
      containers:
        - image: docker.io/mccutchen/go-httpbin:v2.15.0
          imagePullPolicy: IfNotPresent
          name: httpbin
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "500m"
              memory: 512Mi
            requests:
              cpu: "500m"
              memory: 512Mi
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: httpbin-vs
  namespace: gloo-system
spec:
  sslConfig:
    secretRef:
      name: gloo-tls
      namespace: gloo-system
  virtualHost:
    domains:
    # - 'httpbin.127-0-0-1.nip.io'
    - '*'
    routes:
    - matchers:
      - exact: /headers
      options:
        ratelimit:
            rateLimits:
              - actions:
                  - genericKey:
                      descriptorValue: "headers-path-per-minute"      
      routeAction:
        single:
          upstream:
            name: httpbin-httpbin-8000
            namespace: gloo-system

    - matchers:
      - exact: /get
      options:
        ratelimit:
            rateLimits:
              - actions:
                  - genericKey:
                      descriptorValue: "get-path-per-minute"      
      routeAction:
        single:
          upstream:
            name: httpbin-httpbin-8000
            namespace: gloo-system


    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: httpbin-httpbin-8000
            namespace: gloo-system

    options:
      ratelimit:
        rateLimits:
          - actions:
              - requestHeaders:
                  descriptorKey: for_an_http_header
                  headerName: x-an-header # header x-an-header: an_http_header
